--- a/.tekton/echo-task.yaml
+++ b/.tekton/echo-task.yaml
@@ -27,9 +27,12 @@ spec:
         < /dev/urandom tr -dc "[:alnum:]" | head -c${LOG_LINE_BYTES} > file.txt
 
         # cat the file to stdout LOG_LINES times
+        count=0
         for i in $(seq 0 ${LOG_LINES})
         do
+          echo '$count'
           cat file.txt
-          echo 'And another line for you...\n'
-          sleep 10s
+          echo -e 'And another line for you...'
+          count++
+          sleep 1s
         done
